--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -14,7 +14,7 @@
 \title[Analyse de iSudoku]{Analyse de iSudoku}
 \subtitle[\ldots]{Projet de l'UE Ingénierie du Logiciel}
 \author{
-  Maude \bsc{Bel}
+  Maude \bsc{Bellamy}
   \and
   Antoine \bsc{Houssais}
   \and
@@ -61,40 +61,52 @@
 \subsection{Fiche détaillée de cas d’utilisations}
 \begin{frame}
   \frametitle{Fiche détaillée du cas d'utilisation « Résoudre Grille »}
-\begin{description}
-  \item [But]
-    L'utilisateur veut résoudre une nouvelle grille de sudoku
-    \pause
-  \item [Séquencement]
-    Le cas d'utilisation commence lorsque la grille apparaît sur l'écran du
-    smartphone / tablette
+  \setbeamertemplate{blocks}[default]
+  \begin{block}{\footnotesize{But}}
+\scriptsize{L'utilisateur veut résoudre une nouvelle grille de sudoku}
+  \end{block}
   \pause
-  \item [Enchaînement nominal]
-    \begin{enumerate}
+  \begin{block}{\footnotesize{Séquencement}}
+\scriptsize{Le cas d'utilisation commence lorsque la grille apparaît sur l'écran du
+    smartphone / tablette}
+  \end{block}
+  \pause
+  \begin{block}{\footnotesize{Enchaînement nominal}}
+    \begin{enumerate}    
       \setbeamertemplate{enumerate item}[circle]
     \item
-      L'utilisateur sélectionne une case vide de la grille à remplir.
+      \scriptsize{L'utilisateur sélectionne une case vide de la grille à remplir.}
       \pause
     \item
-      Le système affiche une aide selon le niveau de difficulté :
+      \scriptsize{Le système affiche une aide selon le niveau de difficulté :}
+      \pause
       \begin{itemize}
         \setbeamertemplate{itemize item}[circle]
-        \item
-          facile : le système affiche pour chaque case les valeurs possibles au vu du
-          reste de la grille
-        \item
-          difficile : le système n'affiche rien
-        \end{itemize}
+      \item
+        \scriptsize{facile : le système affiche pour chaque case les valeurs possibles au vu du
+        reste de la grille}
+      \item
+        \scriptsize{difficile : le système n'affiche rien}
+      \end{itemize}
       \pause
     \item
-      L'utilisateur entre un numéro de 1 à 9 dans cette case.
+      \scriptsize{L'utilisateur entre un numéro de 1 à 9 dans cette case.}
       \pause
     \item
-      L'utilisateur répète l'action 1) jusqu'à compléter intégralement la grille.
+      \scriptsize{L'utilisateur répète l'action 1) jusqu'à compléter intégralement la grille.}
       \pause
     \item
-      L'utilisateur valide la grille.
+      \scriptsize{L'utilisateur valide la grille.}
     \end{enumerate}
-  \end{description}
+  \end{block}
+\end{frame}
+\begin{frame}
+\frametitle{Fiche détaillée du cas d'utilisation : « Résoudre Grille »}
+\setbeamertemplate{blocks}[default]
+  \begin{block}{\footnotesize{Post-conditions}}
+    \scriptsize{Le QI du joueur est mis-à-jour}
+  \end{block}
+  \pause
+
 \end{frame}
 \end{document}
