--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -165,7 +165,6 @@ Le système a modifié les options.
     \end{block}
 \end{frame}
 
-
 \subsection{Diagramme de classe métier}
 \begin{frame}
 \frametitle{Diagramme de classe métier}
@@ -174,5 +173,6 @@ Le système a modifié les options.
 \end{figure}
 \end{frame}
 
-
+\begin{frame}
+\end{frame}
 \end{document}
