--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -290,11 +290,13 @@ L’enchaînement démarre après n’importe quel point de la séquence nominal
       \setbeamertemplate{enumerate item}[circle]
     \item
       \scriptsize{L’utilisateur saisit un mauvais numéro dans une case vide (c’est-à-dire un numéro entre 1 et 9 apparaissant déjà dans la colonne et/ou dans la ligne et/ou dans le carré).}
+    \item
+      \scriptsize{Le système affiche un message signalant que la valeur est fausse.}
       \end{enumerate}
     \end{block}
     \pause
     \begin{block}{\footnotesize{Résultat attendu}}
-      \scriptsize{Le système affiche un message signalant que la valeur est fausse.}
+      \scriptsize{Visuel : Une erreur est signalée et le numéro va être colorisé en rouge.}
     \end{block}
   \end{frame}
   
