--- a/presentation_finale/presentation.tex
+++ b/presentation_finale/presentation.tex
@@ -51,13 +51,28 @@
   \end{figure}
 \end{frame}
 
-\subsection{Un diagramme de séquence de niveau interaction inter-composant}
+\subsection{Quelques diagrammes de séquence de niveau interaction inter-composant}
 \begin{frame}
-  \frametitle{Un diagramme de séquence}
+  \frametitle{Diagramme de séquence « Jouer une partie »}
   \begin{figure}[h]
-    \includegraphics[scale=0.275]{dia_seq_02.jpg}
+    \includegraphics[scale=0.275]{diagrammeSequence_01.png}
   \end{figure}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Diagramme de séquence « Affiche statistiques »}
+  \begin{figure}[h]
+    \includegraphics[scale=0.275]{diagrammeSequence_02.png}
+  \end{figure}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Diagramme de séquence « Générer une grille par photo »}
+  \begin{figure}[h]
+    \includegraphics[scale=0.275]{diagrammeSequence_03.png}
+  \end{figure}
+\end{frame}
+
 
 \subsection{Instanciation nominale des composants}
 \begin{frame}
